                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 20-04-2006 fixed: Remove, Edit and Add Sources wouldn't be applied if the user ran as dash via the <home> tag (not recommended)
 - 29-04-2006 fixed: [ 1478872 ] slide show smb lookup uses shortened path then fails
 - 29-04-2006 fixed: 'movie information' was enabled in context menu for inappropriate entries in video database views.
 - 29-04-2006 fixed: visualisation transition on activate.
 - 29-04-2006 fixed: ButtonScroller - focus wasn't set to defaultbutton.
 - 29-04-2006 fixed: visualisation preset and lockstate were not reset when switching between visualisations.
 - 29-04-2006 fixed: Possible crashes when accessing nonexistent seekbar.
 - 29-04-2006 fixed: [ 1478357 ] Umlaute in movie/music info and scripts
 - 29-04-2006 fixed: [ 1478354 ] Python "overlapping of lines"
 - 29-04-2006 fixed: shoutcast urls now work with http api.
 - 29-04-2006 fixed: (hopefully) [ 1476918 ] Thumbnail/Icon for all homebrew games uses Super Mario War
 - 29-04-2006 changed: visualisation preset and lockstate are now remembered between windows and sessions.
 - 29-04-2006 fixed: Deletion of stacked files didn't work.
 - 29-04-2006 fixed: Thumbs for filenames with non-ascii characters didn't show in Album and Movie Info screens.
 - 29-04-2006 changed: Stack button can now be a radiobutton.
 - 29-04-2006 fixed: my programs, wrong item could be selected after eject/load in context menu was used.
 - 29-04-2006 fixed: [ 1478235 ] Little XBMC info issues.
 - 28-04-2006 fixed: shoutcast servers that returned "playlist" as content-type wouldn't play.
 - 28-04-2006 fixed: paplayer can record (mp3)shoutcast now too.